# 3D-Engine-in-Pygame

./: README.md  camera.py  main.py  matrix_functions.py  object_3d.py  projection.py  pyproject.toml
